<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>42-security-rest</artifactId>
    <organization>
        <name>Spring Training</name>
        <url>https://spring.io/training</url>
    </organization>
    <packaging>jar</packaging>
    <parent>
        <groupId>io.spring.training.core-spring</groupId>
        <artifactId>parentProject</artifactId>
        <version>5.3.23</version>
    </parent>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <start-class>accounts.RestWsApplication</start-class>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <!-- TO-DO-01: Verify the presence of Spring Boot Security dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <!-- Common classes: Percentage, MonetaryAmount -->
        <dependency>
            <groupId>io.spring.training.core-spring</groupId>
            <artifactId>00-rewards-common</artifactId>
        </dependency>
        <dependency>
            <groupId>io.spring.training.core-spring</groupId>
            <artifactId>01-rewards-db</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
